--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title> SmartGrid </title>
   </head>
   <body>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgWxooTzXCVXgF8O6J5czgHRwIopQxpVs&libraries=places&callback=initAutocomplete" async defer></script>
